--- a/index.html
+++ b/index.html
@@ -5,14 +5,26 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="styles.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.23.0/axios.js"></script>
 	<title>Document</title>
 </head>
 
 <body>
 
-	<div class='container'></div>
+	<div class='container'>
+		<form class="form">
+			<label for="form-name" class="form__label">Name</label>
+			<input type="text" name="name" class="form__input" placeholder="Enter City">
+			<button type="submit" class="form__button">FIND</button>
+		</form>
 
-	
+		<div class="content">
+			
+		</div>
+	</div>
+
+
 
 	<script src="script.js"></script>
 </body>
