added JS functionality and get API

--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@
 
 	<div class='container'>
 		<form class="form">
-			<label for="form-name" class="form__label">Name</label>
+			<label for="form-name" class="form__label">Weather App</label>
 			<input type="text" name="name" class="form__input" placeholder="Enter City">
 			<button type="submit" class="form__button">FIND</button>
 		</form>
 
+		<div class="weather__buttons">
+			<input type="radio" name="temp" class="weather__cel">
+			Celsius</input>
+			<input type="radio" name="temp" class="weather__fah">
+			Fahrenheit</input>
+		</div>
+
 		<div class="content">
-			
+
 		</div>
 	</div>
 
